# WebDock-Rust

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  WebRust.entitlements  build_app.sh  install_home.sh  release_notarize.sh  setup_dev_cert.sh
.github/workflows/: ci.yml  release.yml
Assets/: AppIcon.icns
crates/webdock-core/: Cargo.toml
crates/webdock-core/src/: config.rs  input_seat.rs  lib.rs  tuning.rs
crates/webdock-encoder/: Cargo.toml
crates/webdock-encoder/examples/: soft_dump.rs  vt_dump.rs
crates/webdock-encoder/src/: h264.rs  lib.rs  macos_vt.rs  session.rs
crates/webdock-platform/: Cargo.toml
crates/webdock-platform/src/: lib.rs  mock.rs  route.rs  traits.rs  types.rs
crates/webdock-platform/src/native/: apps.rs  ax_close.rs  capture.rs  cg_mouse.rs  cg_type.rs  clipboard.rs  icons.rs  ime.rs  input.rs  metrics.rs  mod.rs  permissions.rs  power.rs  session.rs  window_ctl.rs
crates/webdock-protocol/: Cargo.toml
crates/webdock-protocol/src/: binary.rs  client.rs  lib.rs  server.rs  types.rs
crates/webdock-server/: Cargo.toml
crates/webdock-server/src/: auth.rs  handlers.rs  host.rs  lib.rs  main.rs  peer.rs  settings.html  state.rs  static_files.rs  updater.rs  util.rs
crates/webdock-server/src/gui/: desktop.rs  macos.rs  mod.rs
docs/: BUILD.md  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh.md  RELEASE_BODY.md  SIGNING.md  UPDATES.md
packaging/linux/: webrust.desktop
packaging/macos/: component.plist.in  distribution.xml.in  welcome.html
packaging/windows/: build_installer.ps1  webrust.iss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui-settings/: index.html  package.json
ui-settings/src/: main.ts
webui/: app.js  i18n.js  index.html  styles.css
