[workspace]
resolver = "2"
members = [
    "crates/webdock-protocol",
    "crates/webdock-core",
    "crates/webdock-platform",
    "crates/webdock-encoder",
    "crates/webdock-server",
    "src-tauri",
]
default-members = [
    "crates/webdock-protocol",
    "crates/webdock-core",
    "crates/webdock-platform",
    "crates/webdock-encoder",
    "crates/webdock-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alice-cli/WebDock-Rust"
authors = ["WebDock contributors"]

[workspace.dependencies]
webdock-protocol = { path = "crates/webdock-protocol" }
webdock-core = { path = "crates/webdock-core" }
webdock-platform = { path = "crates/webdock-platform" }
webdock-encoder = { path = "crates/webdock-encoder" }
webdock-server = { path = "crates/webdock-server" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "set-header", "cors"] }
tower = "0.5"
bytes = "1"
futures-util = "0.3"
http = "1"
subtle = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
sysinfo = "0.33"
if-addrs = "0.13"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
