[package]
name = "webdock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-independent domain logic: config, input seat, adaptive bitrate"

[dependencies]
webdock-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
directories = "6"

[dev-dependencies]
serde_json = { workspace = true }
