[package]
name = "webdock-encoder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Frame encoding trait and JPEG/PNG/H.264 backends"

[dependencies]
webdock-protocol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
openh264 = { version = "0.9", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
