[package]
name = "webdock-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebDock WebSocket/HTTP message types and binary frame format"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
